--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   transparent_image: ^2.0.0
+  cached_network_image: ^3.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
