--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   transparent_image: ^2.0.0
   cached_network_image: ^3.2.0
+  provider: ^4.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
